[package]
name = "rust-audio-player"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["wgpu", "tokio", "svg"] }
rfd = "0.15.4"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.4", features = ["all"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"

[package.metadata.android]
build_targets = "aarch64-linux-android"
min_sdk_version = 34
target_sdk_version = 34
label = "Rust Audio Player"
uses_non_sdk_api = false
package = "com.example.rustaudioplayer"