[package]
name = "rust-audio-player"
version = "0.1.2"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["wgpu", "tokio", "svg"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.4", features = ["all"] }
rfd = "0.15.4"
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"